Fix reset button styling on mobile
On mobile, we only show the reset button in the
main map when a filter is active.

The styling to achieve this was unintentionally
affecting the styling of the reset button on the
full-screen advanced search view.

Connects to #2948

--- a/assets/css/sass/partials/_header.scss
+++ b/assets/css/sass/partials/_header.scss
@@ -161,23 +161,25 @@
                 white-space: nowrap;
                 overflow: hidden;
             }
+            &:not(.active) {
+                &.filter-active + #search-reset, &.simple-filter-active + #search-reset {
+                    display: block;
+                    color: $primary-color;
+                    border: none;
+                    background: none;
+                    width: auto;
+                    height: 35px;
+                    text-transform: uppercase;
+                    font-size: 1.2rem;
+                    padding: 0;
+                    padding-left: 15px;
+                    transition: opacity 0.1s;
+                    transition-delay: 0.2s;
+                }
+            }
         }
         #search-reset, #perform-search {
             display: none;
-        }
-        .filter-active + #search-reset, .simple-filter-active + #search-reset {
-            display: block;
-            color: $primary-color;
-            border: none;
-            background: none;
-            width: auto;
-            height: 35px;
-            text-transform: uppercase;
-            font-size: 1.2rem;
-            padding: 0;
-            padding-left: 15px;
-            transition: opacity 0.1s;
-            transition-delay: 0.2s;
         }
     }
 
